# Auto-Document-Storage

./: .gitignore  README.md  Script.py  add_prefix.py  change_prefix.py  config.example.yaml  import_issues.sh  pyproject.toml  sample_credentials.py  sender_mapping.example copy.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  require-type-label.yml
launchd.example/: com.user.pdf_filer.plist
src/pdf_filer/: classifier.py  config.py  db.py  llm.py  logging_setup.py  main.py  mapping.py  mover.py  naming.py  pdf_text.py  scanner.py  utils.py  vision_ocr.py
src/pdf_filer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pdf_filer/gui/: analyzer.py  app.py  diff_dialog.py  edit_dialog.py  mapping_editor.py  preview.py  state.py  types.py  validators.py
tests/: test_mapping.py  test_naming.py  test_routing.py
