[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-filer"
version = "0.1.0"
description = "Local PDF auto-filing on macOS with Vision OCR + multi-stage Ollama classification + SQLite logging."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "GePlusE" }
]

dependencies = [
  "PyMuPDF>=1.24.0",
  "PyYAML>=6.0.1",
  "requests>=2.31.0",
  "rich>=13.7.0",

  # GUI (optional, but kept as a normal dependency for now)
  "PySide6>=6.6",

  # macOS Vision OCR (only install on macOS)
  "pyobjc-core>=10.0; platform_system == 'Darwin'",
  "pyobjc-framework-Vision>=10.0; platform_system == 'Darwin'",
  "pyobjc-framework-Quartz>=10.0; platform_system == 'Darwin'",
  "pyobjc-framework-Cocoa>=10.0; platform_system == 'Darwin'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
  "build>=1.2.0",
  "twine>=5.0.0",
]

[project.scripts]
pdf-filer = "pdf_filer.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
